SERVER-59308 Ensure empty $lookup subpipeline optimizes correctly with subsequent $match